--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/thecyberworld/api.thecyberhhub.org#readme",
   "dependencies": {
+    "aws-sdk": "^2.1304.0",
     "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
     "cors": "^2.8.5",
